# vapoursynth-analog

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  BUILDING.md  README.md  README.python.md  manifest.vs  meson.build  meson_options.txt  pyproject.toml  requirements.docs.txt
.github/workflows/: build.yml
docs/: building.rst  changelog.rst  conf.py  index.rst  installation.rst  models.rst  plugin-api.rst  python-api.rst
docs/_static/css/: piccolo_overrides.css
python/vsanalog/: __init__.py  meson.build
python/vsanalog/__pyinstaller/: __init__.py  hook-vsanalog.py
python/vsanalog/models/: ldzeug2_color_cnn_v1.onnx  ldzeug2_color_cnn_v1_denoise.onnx  ldzeug2_color_cnn_v2.onnx  ldzeug2_luma_sep_2d_frame_gray_gray_run2_latest.onnx  ldzeug2_luma_sep_2dgray_fields.onnx
src/: analog4fsc.cpp  analog4fsc.h  dropoutcorrector.cpp  dropoutcorrector.h  jsonconverter_wrapper.cpp  jsonconverter_wrapper.h  ldzeug_decoders.cpp  ldzeug_decoders.h  plugin.cpp  sqlite3_metadata_reader.cpp  sqlite3_metadata_reader.h  tbcreader.cpp  tbcreader.h  version.h
src/stubs/: QSqlDatabase  QSqlError  QSqlQuery  sqliteio.h
tests/: conftest.py  test_autoload.py  test_ldzeug2_cpu.py  test_nntransform3d_cpu.py  test_pal_default_decode.py  test_provider_fallback.py  test_wheel_layout.py
tools/: colocate_plugin_libs.py  init_submodule_sparse.sh  inject_providers_shared.py  patch_brew_onnxruntime.sh  patch_tbc_tools.py  restore_qt_frameworks.py  sdist_include_submodule.py  stage_macos_onnxruntime.py
