[build-system]
requires = ["meson-python>=0.13", "meson>=1.0,!=1.11.0"]
build-backend = "mesonpy"

[project]
name = "vsanalog"
description = "VapourSynth plugin for working with digitized analog video signals"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
dynamic = ["version"]
dependencies = [
    "vapoursynth>=55",
    "typing_extensions>=4.0; python_version < '3.10'",
]

[project.entry-points.pyinstaller40]
hook-dirs = "vsanalog.__pyinstaller:get_hook_dirs"

[tool.meson-python.args]
setup = ["-Dbuild_wheel=true"]
