py.install_sources(
    '__init__.py',
    'py.typed',
    subdir: 'vsanalog',
)

py.install_sources(
    '__pyinstaller/__init__.py',
    '__pyinstaller/hook-vsanalog.py',
    subdir: 'vsanalog/__pyinstaller',
)

py.install_sources(
    'models/nntransform3d_v1.onnx',
    'models/nntransform3d_v2.onnx',
    'models/ldzeug2_luma_sep_2dgray_fields.onnx',
    'models/ldzeug2_luma_sep_2d_frame_gray_gray_run2_latest.onnx',
    'models/ldzeug2_color_cnn_1031640.onnx',
    'models/ldzeug2_color_cnn_denoise_613928_ft22k.onnx',
    'models/ldzeug2_color_cnn_v2_alot.onnx',
    subdir: 'vsanalog/models',
)
